src/Styles/_Grid.scss
.wrapper {
    margin: 0 auto;
    width: 90vw;
    padding: 0.5rem 0;
}

.col-left {
    display: flex;
    width: 100%;
    justify-content: space-between;
    align-items: center;
}

.col-main {
    @include flexColumn;
    width: 100%;
    height: 100%;
}

@media (min-width: 755px) {
    .col-left {
        width: 100%;
        display: flex;
        height: auto;
    }
    .col-main {
        width: 100%;
        &>div:last-child {
            margin-bottom: 0;
        }
    }
}

@media (min-width: 960px) {
    .wrapper {
        display: grid;
        grid-template-columns: 1fr 4fr;
    }
    .col-left {
        flex: 2 2 100%;
        height: 100%;
        flex-direction: column;
        align-items: flex-start;
        justify-content: flex-start;
        position: relative;
        padding: 0 $fullPad;
    }
    .col-main {
        flex: 1 1 100%;
        height: 100%;
        display: flex;
    }
}

@media (min-width: 1200px) {
    .wrapper {
        display: grid;
        grid-template-columns: 1fr 4fr;
        width: 80vw;
        max-width: 1200px;
    }
}

// MAIN GRID STYLES (Featured in Home.js)
@media (min-width: 755px) {
    .grid {
        display: grid;
        width: 100%;
    }
    .grid--2fr-2fr {
        grid-template-columns: 2fr 2fr;
        grid-column-gap: $halfPad;
        grid-auto-rows: min-content;
    }
    .grid--3fr-1fr {
        grid-template-columns: 3fr 1fr;
        grid-column-gap: $halfPad;
        grid-auto-rows: min-content;
    }
    .grid--3fr {
        grid-template-columns: repeat(3, 1fr);
        grid-gap: $halfPad;
        grid-auto-rows: min-content;
    }
    .grid--4fr {
        grid-template-columns: repeat(4, 1fr);
        grid-auto-rows: min-content;
        grid-gap: $halfPad;
        margin-bottom: $halfPad;
    }
    .grid__item {
        display: flex;
    }
    .grid__item--span1 {
        grid-column: span 1;
    }
    .grid__item--span2 {
        grid-column: span 2;
    }
    .grid__item--span3 {
        grid-column: span 3;
    }
}

